--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,25 @@
-version: 2.1
-orbs:
-  node: circleci/node@3.0.0
+version 2.1
+
+jobs:
+  build:
+    working_directory: ~/SkinCancer
+    docker:
+      -image: circleci/node@3.0.0
+    steps:
+      - checkout
+      - restore_cache:
+        key: npm-cache-v1-{{ checksum "package-lock.json" }}
+      - run:
+        name: Install Dependencies
+        command: npm ci
+      - save_cache:
+        key: npm-cache-v1-{{ checksum "package-lock.json" }}
+        paths:
+          - home/circleci/.npm
+      - run:
+        name: Run Tests
+        command: npx jest --ci
 workflows:
-  node-tests:
+  build_and_test:
     jobs:
-      - node/test
-
-
-# orbs:
-#   react-native: react-native-community/react-native@4.4.2
-# https://circleci.com/developer/orbs/orb/react-native-community/react-native
+      - build
