--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,45 @@
-version 2.1
+# version: 2.1
+# jobs:
+#   build:
+#     working_directory: ~/SkinCancer
+#     docker:
+#       - image: circleci/node@3.0.0
+#     steps:
+#       - checkout
+#       - restore_cache:
+#         key: npm-cache-v1-{{ checksum "package-lock.json" }}
+#       - run:
+#         name: Install Dependencies
+#         command: npm ci
+#       - save_cache:
+#         key: npm-cache-v1-{{ checksum "package-lock.json" }}
+#         paths:
+#           - home/circleci/.npm
+#       - run:
+#         name: Run Tests
+#         command: npx jest --ci
+# workflows:
+#   build_and_test:
+#     jobs:
+#       - build
 
+version: 2
 jobs:
   build:
     working_directory: ~/SkinCancer
     docker:
-      -image: circleci/node@3.0.0
+      - image: circleci/node:8
     steps:
       - checkout
       - restore_cache:
-        key: npm-cache-v1-{{ checksum "package-lock.json" }}
+          key: npm-cache-v1-{{ checksum "package-lock.json" }}
       - run:
-        name: Install Dependencies
-        command: npm ci
+          name: Install Dependencies
+          command: npm ci
       - save_cache:
-        key: npm-cache-v1-{{ checksum "package-lock.json" }}
-        paths:
-          - home/circleci/.npm
+          key: npm-cache-v1-{{ checksum "package-lock.json" }}
+          paths:
+            - /home/circleci/.npm
       - run:
-        name: Run Tests
-        command: npx jest --ci
-workflows:
-  build_and_test:
-    jobs:
-      - build
+          name: Run Tests
+          command: npx jest --ci
