--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     ]
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.1",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "expo": "~39.0.2",
