--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-gesture-handler": "^1.9.0",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.3",
     "react-test-renderer": "^17.0.1"
   },
   "devDependencies": {
