--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     ]
   },
   "dependencies": {
+    "@react-native-picker/picker": "^1.9.4",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
-    "expo": "~39.0.2",
+    "expo": "^39.0.5",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-dropdown-picker": "^3.7.1",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12",
     "react-test-renderer": "^17.0.1"
