--- a/package.json
+++ b/package.json
@@ -15,27 +15,27 @@
     ]
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.2.1",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-picker/picker": "^1.9.4",
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "1.9.2",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
-    "expo": "^39.0.5",
-    "expo-status-bar": "~1.0.2",
+    "expo": "^40.0.0",
+    "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-gesture-handler": "^1.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-dropdown-picker": "^3.7.1",
-    "react-native-screens": "~2.10.1",
+    "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
     "react-test-renderer": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "expo-camera": "^9.1.1",
-    "jest-expo": "^39.0.0"
+    "expo-camera": "~9.1.0",
+    "jest-expo": "^40.0.0"
   },
   "private": true
 }
