--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
-    "react-test-renderer": "^17.0.1"
+    "react-test-renderer": "^17.0.1",
+    "expo-sqlite": "~8.5.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
