--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-navigation/stack": "^5.12.8",
     "expo": "^40.0.1",
     "expo-mail-composer": "~9.0.0",
+    "expo-media-library": "^11.0.0",
+    "expo-sqlite": "~8.5.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -31,8 +33,7 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
-    "react-test-renderer": "^17.0.1",
-    "expo-sqlite": "~8.5.0"
+    "react-test-renderer": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
