--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
-    "expo": "^40.0.1",
-    "expo-mail-composer": "~9.0.0",
-    "expo-media-library": "^11.0.0",
-    "expo-sqlite": "~8.5.0",
+    "expo": "^40.0.0",
+    "expo-file-system": "^9.3.0",
+    "expo-media-library": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
