--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "@terrylinla/react-native-sketch-canvas": "^0.8.0",
     "expo": "^40.0.0",
     "expo-file-system": "^9.3.0",
     "expo-media-library": "~10.0.0",
     "expo-status-bar": "~1.0.3",
+    "npm-autolink": "^1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
@@ -32,7 +34,7 @@
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-screens": "~2.15.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.15.0",
     "react-test-renderer": "^17.0.1"
   },
   "devDependencies": {
