--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "^40.0.1",
+    "expo-sqlite": "^9.0.0",
     "expo-file-system": "^9.3.0",
     "expo-media-library": "~10.0.0",
     "expo-status-bar": "~1.0.3",
@@ -33,9 +34,9 @@
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-screens": "~2.15.0",
-    "react-native-view-shot": "^3.1.2",
     "react-native-web": "^0.15.0",
-    "react-test-renderer": "^17.0.1"
+    "react-test-renderer": "^17.0.1",
+    "react-native-view-shot": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
