--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.0.tar.gz",
     "react-native-dialog": "^6.1.2",
+    "react-native-dropdown-menu": "^2.0.0",
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-screens": "~2.15.0",
