--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-screens": "~2.15.0",
     "react-native-view-shot": "^3.1.2",
     "react-native-web": "^0.15.0",
