--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "1.9.2",
     "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "^40.0.1",
@@ -35,7 +36,9 @@
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-paper": "^4.7.2",
     "react-native-screens": "~2.15.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-view-shot": "^3.1.2",
     "react-native-web": "^0.15.0",
     "react-test-renderer": "^17.0.1"
