Added auto focus and removed split view for tablets (i think)

--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
       "supportsTablet": true,
       "infoPlist": {
         "NSCameraUsageDescription": "This app uses the camera to take photos."
-      }
+      },
+      "requireFullScreen": true
     },
     "android": {
       "package": "com.yourcompany.yourappname",
