--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/stack": "^5.12.8",
     "expo": "^40.0.1",
     "expo-file-system": "^9.3.0",
+    "expo-mail-composer": "~9.0.0",
     "expo-media-library": "~10.0.0",
     "expo-notifications": "~0.8.2",
     "expo-sqlite": "~8.5.0",
