--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-notifications": "~0.8.2",
     "expo-sqlite": "~8.5.0",
     "expo-status-bar": "~1.0.3",
+    "expo-web-browser": "^9.0.0",
     "npm-autolink": "^1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
