--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "^40.0.1",
+    "expo-constants": "^9.3.5",
     "expo-file-system": "^9.3.0",
     "expo-mail-composer": "~9.0.0",
     "expo-media-library": "~10.0.0",
